HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureRefCaptureMoved/Expected.uv
//! Expected diagnostic metadata for the ClosureRefCaptureMoved rejected-source specimen.

expectedDiagnostic("E-MEM-3001", "rule.16.B-Closure-RefCapture-Moved-Err")
